Add frigate and base conf

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ MYSQL_DATABASE=homeassistant #optional
 MYSQL_USER=homeassistant #optional
 MYSQL_PASSWORD=password
 ZWAVE_DEVICE_ID=/dev/serial/by-id/zwave-stick-id
+FRIGATE_RTSP_PASSWORD=password
+FRIGATE_FRONT_DOORBELL_USERNAME=frigate
+FRIGATE_FRONT_DOORBELL_PASSWORD=password
