Use intel hwaccel on HAL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,8 +72,8 @@ services:
     devices:
       # - /dev/bus/usb:/dev/bus/usb  # Passes the USB Coral, needs to be modified for other versions
       # - /dev/apex_0:/dev/apex_0    # Passes a PCIe Coral, follow driver instructions here https://coral.ai/docs/m2/get-started/#2a-on-linux
-      - /dev/video11:/dev/video11  # For Raspberry Pi 4B
-      # - /dev/dri/renderD128:/dev/dri/renderD128 # For intel hwaccel, needs to be updated for your hardware
+      # - /dev/video11:/dev/video11  # For Raspberry Pi 4B
+      - /dev/dri/renderD128:/dev/dri/renderD128 # For intel hwaccel, needs to be updated for your hardware
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./config/frigate:/config
