--- a/config/frigate/config.yml
+++ b/config/frigate/config.yml
@@ -7,6 +7,19 @@ mqtt:
 ffmpeg:
   hwaccel_args: preset-vaapi
 
+detectors:
+  ov:
+    type: openvino
+    device: GPU
+
+model:
+  width: 300
+  height: 300
+  input_tensor: nhwc
+  input_pixel_format: bgr
+  path: /openvino-model/ssdlite_mobilenet_v2.xml
+  labelmap_path: /openvino-model/coco_91cl_bkgr.txt
+
 cameras:
   front_doorbell:
     enabled: True
